--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand:wght@400;500;700&display=swap" rel="stylesheet">
     <!-- Project's built-in CSS files  -->
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/loader.css" />
     <link rel="stylesheet" href="css/header.css" />
     <link rel="stylesheet" href="css/features.css" />
     <link rel="stylesheet" href="css/restaurants_list.css" />
