--- a/index.html
+++ b/index.html
@@ -48,21 +48,21 @@
       <!-- """ Features """ section -->
       <section class="features overall-padding">
         <h2 class="overall-section-titles">Fonctionnement</h2>
-        <div class="features-container">
+        <div class="features__container">
           <!-- Item #1 -->
-          <div class="item">
-            <p class="item__circle">1</p>
-            <p class="item__description"><i class="item__icon fa-solid fa-mobile-screen"></i>Choisissez un restaurant</p>
+          <div class="features__item">
+            <p class="features__item__circle">1</p>
+            <p class="features__item__description"><i class="item__icon fa-solid fa-mobile-screen"></i>Choisissez un restaurant</p>
           </div> <!-- /.item -->
           <!-- Item #2 -->
-          <div class="item">
-            <p class="item__circle">2</p>
-            <p class="item__description"><i class="item__icon fa-solid fa-list"></i>Composez votre menu</p>
+          <div class="features__item">
+            <p class="features__item__circle">2</p>
+            <p class="features__item__description"><i class="item__icon fa-solid fa-list"></i>Composez votre menu</p>
           </div> <!-- /.item -->
           <!-- Item #3 -->
-          <div class="item">
-            <p class="item__circle">3</p>
-            <p class="item__description"><i class="item__icon fa-solid fa-store"></i>Dégustez au restaurants</p>
+          <div class="features__item">
+            <p class="features__item__circle">3</p>
+            <p class="features__item__description"><i class="features__item__icon fa-solid fa-store"></i>Dégustez au restaurant</p>
           </div> <!-- /.item -->
         </div> <!-- /.features-container -->
       </section> <!-- /.features -->
