--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               <article class="restaurant mrg-md-right">
                 <div class="card restaurant__card--restaurant">
                   <div class="restaurant__card--restaurant__new">Nouveau</div>
-                  <img src="assets/restaurants/la_palette_du_gout.jpg" />
+                  <img src="assets/restaurants/la_palette_du_gout.jpg" alt="la palette du gout" />
                   <div class="flex">
                     <div>
                       <h3><a class="link-black no-decoration" href="restaurants/la_palette_du_gout.html">La palette du gout</a></h3>
